--- a/profil.html
+++ b/profil.html
@@ -19,6 +19,7 @@
     Nama: Irine <br>
     NIK: 1234567890 <br>
     Alamat: <i>Taman Kopo Indah</i> Bandung <br>
-    
+</p>
+    <b><a href="index.html">Kembali</a></b>
 </body>
 </html>
