--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Ini adalah halaman latihan pertama pembuatan web dengan HTML pada pelatihan berbasis proyek tahun 2025</p>
     <ol>
         <li><a href="profil.html">Profil</a></li>
-        <li>Data</li>
+        <li><a href="data.html">Data</a></li>
         <li>Info</li>
         <li>Kontak</li>
     </ol>
