--- a/data.html
+++ b/data.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <img src="logo.jpg"> -->
     <h3>Riwayat Pekerjaan</h3>
-    <table>
+    <table border="1">
         <tr>
             <th>Nama Perusahaan</th>
             <th>Jabatan</th>
