--- a/data.html
+++ b/data.html
@@ -15,8 +15,8 @@
             <th>Tahun</th>
         </tr>
         <tr>
-            <td>PT. Les Enphants Indonesia</td>
-            <td>Accounting Staff</td>
+            <td>PT. Angin Mamiri</td>
+            <td>General Manager</td>
             <td>2009 - 2010</td>
         </tr>
         <tr>
