--- a/artikel.html
+++ b/artikel.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body style="width: 50%; margin: 0 auto;">
+    <div id="top"></div>
     <img src="logo.jpg" alt="Logo Perusahaan">
     <hr>
     <table>
@@ -35,6 +36,7 @@
         Where can I get some?<br>
         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.<br>
     </p>
+    <a href="#top">Back to top</a>
 <br>
 <br>
 <br>
@@ -52,6 +54,7 @@
         1914 translation by H. Rackham<br>
         "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."<br>
     </p>
+    <a href="#top">Back to top</a>
 <br>
 <br>
 <br>
@@ -67,6 +70,7 @@
             <li>Komunitas besar dan aktif</li>
         </ul>
     </p>
+    <a href="#top">Back to top</a>
 <br>
 <br>
 <br>
